# my-hikes

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
generator/: cli.py  config.py  gpx.py  models.py  photos.py  r2.py  render.py
site/: index.html
site/hikes/2026-04-jungle-trek/: day-1-hike.gpx  day-2-hike.gpx  day-3-hike.gpx  day-4-hike.gpx  day-4-water-hole.gpx  day-5-rafting.gpx  index.html  meta.json
site/static/js/: hike.js
static/js/: hike.js
templates/: base.html  hike.html  home.html
tests/: conftest.py  test_cli.py  test_config.py  test_gpx.py  test_photos.py  test_r2.py  test_render.py  test_site_config.py
tests/fixtures/: blip.gpx  simple.gpx
tests/fixtures/two_routes/: early.gpx  late.gpx
